; ModuleID = '/home/carl/AnghaBench/linux/drivers/crypto/caam/extr_dpseci.c_dpseci_get_attributes.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/crypto/caam/extr_dpseci.c_dpseci_get_attributes.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fsl_mc_io = type { i32 }
%struct.dpseci_attr = type { i8*, i32, i32, i8* }
%struct.fsl_mc_command = type { i64, i32, i32 }
%struct.dpseci_rsp_get_attributes = type { i32, i32, i32, i32 }

@DPSECI_CMDID_GET_ATTR = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @dpseci_get_attributes(%struct.fsl_mc_io* %0, i32 %1, i32 %2, %struct.dpseci_attr* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.fsl_mc_io*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.dpseci_attr*, align 8
  %10 = alloca %struct.fsl_mc_command, align 8
  %11 = alloca %struct.dpseci_rsp_get_attributes*, align 8
  %12 = alloca i32, align 4
  store %struct.fsl_mc_io* %0, %struct.fsl_mc_io** %6, align 8
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store %struct.dpseci_attr* %3, %struct.dpseci_attr** %9, align 8
  %13 = bitcast %struct.fsl_mc_command* %10 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 8 %13, i8 0, i64 16, i1 false)
  %14 = load i32, i32* @DPSECI_CMDID_GET_ATTR, align 4
  %15 = load i32, i32* %7, align 4
  %16 = load i32, i32* %8, align 4
  %17 = call i32 @mc_encode_cmd_header(i32 %14, i32 %15, i32 %16)
  %18 = getelementptr inbounds %struct.fsl_mc_command, %struct.fsl_mc_command* %10, i32 0, i32 1
  store i32 %17, i32* %18, align 8
  %19 = load %struct.fsl_mc_io*, %struct.fsl_mc_io** %6, align 8
  %20 = call i32 @mc_send_command(%struct.fsl_mc_io* %19, %struct.fsl_mc_command* %10)
  store i32 %20, i32* %12, align 4
  %21 = load i32, i32* %12, align 4
  %22 = icmp ne i32 %21, 0
  br i1 %22, label %23, label %25

23:                                               ; preds = %4
  %24 = load i32, i32* %12, align 4
  store i32 %24, i32* %5, align 4
  br label %51

25:                                               ; preds = %4
  %26 = getelementptr inbounds %struct.fsl_mc_command, %struct.fsl_mc_command* %10, i32 0, i32 0
  %27 = load i64, i64* %26, align 8
  %28 = inttoptr i64 %27 to %struct.dpseci_rsp_get_attributes*
  store %struct.dpseci_rsp_get_attributes* %28, %struct.dpseci_rsp_get_attributes** %11, align 8
  %29 = load %struct.dpseci_rsp_get_attributes*, %struct.dpseci_rsp_get_attributes** %11, align 8
  %30 = getelementptr inbounds %struct.dpseci_rsp_get_attributes, %struct.dpseci_rsp_get_attributes* %29, i32 0, i32 3
  %31 = load i32, i32* %30, align 4
  %32 = call i8* @le32_to_cpu(i32 %31)
  %33 = load %struct.dpseci_attr*, %struct.dpseci_attr** %9, align 8
  %34 = getelementptr inbounds %struct.dpseci_attr, %struct.dpseci_attr* %33, i32 0, i32 3
  store i8* %32, i8** %34, align 8
  %35 = load %struct.dpseci_rsp_get_attributes*, %struct.dpseci_rsp_get_attributes** %11, align 8
  %36 = getelementptr inbounds %struct.dpseci_rsp_get_attributes, %struct.dpseci_rsp_get_attributes* %35, i32 0, i32 2
  %37 = load i32, i32* %36, align 4
  %38 = load %struct.dpseci_attr*, %struct.dpseci_attr** %9, align 8
  %39 = getelementptr inbounds %struct.dpseci_attr, %struct.dpseci_attr* %38, i32 0, i32 2
  store i32 %37, i32* %39, align 4
  %40 = load %struct.dpseci_rsp_get_attributes*, %struct.dpseci_rsp_get_attributes** %11, align 8
  %41 = getelementptr inbounds %struct.dpseci_rsp_get_attributes, %struct.dpseci_rsp_get_attributes* %40, i32 0, i32 1
  %42 = load i32, i32* %41, align 4
  %43 = load %struct.dpseci_attr*, %struct.dpseci_attr** %9, align 8
  %44 = getelementptr inbounds %struct.dpseci_attr, %struct.dpseci_attr* %43, i32 0, i32 1
  store i32 %42, i32* %44, align 8
  %45 = load %struct.dpseci_rsp_get_attributes*, %struct.dpseci_rsp_get_attributes** %11, align 8
  %46 = getelementptr inbounds %struct.dpseci_rsp_get_attributes, %struct.dpseci_rsp_get_attributes* %45, i32 0, i32 0
  %47 = load i32, i32* %46, align 4
  %48 = call i8* @le32_to_cpu(i32 %47)
  %49 = load %struct.dpseci_attr*, %struct.dpseci_attr** %9, align 8
  %50 = getelementptr inbounds %struct.dpseci_attr, %struct.dpseci_attr* %49, i32 0, i32 0
  store i8* %48, i8** %50, align 8
  store i32 0, i32* %5, align 4
  br label %51

51:                                               ; preds = %25, %23
  %52 = load i32, i32* %5, align 4
  ret i32 %52
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @mc_encode_cmd_header(i32, i32, i32) #2

declare dso_local i32 @mc_send_command(%struct.fsl_mc_io*, %struct.fsl_mc_command*) #2

declare dso_local i8* @le32_to_cpu(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
